# desk_ddl_reminder

./: README.md
Release/: CMakeCache.txt  cmake_install.cmake
project/: CMakeLists.txt  credits.ui  desktoppet.cpp  desktoppet.h  history.ui  image.qrc  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.ui  mainwindow3.ui  mainwindow4.ui  selection.ui  todolist.ui
